--- a/.gitignore
+++ b/.gitignore
@@ -151,5 +151,5 @@ temp/
 # End of https://www.gitignore.io/api/visualstudiocode,macos,node
 
 # Custom rules (everything added below won't be overriden by 'Generate .gitignore File' if you use 'Update' option)
-records/*
-!records/PUT_AUDIO_HERE.md
+audios/*
+!audios/PUT_AUDIO_HERE.md
